Update menu logic and stylesheets so that the calculations will make a precise menu.   Also fixed the heights of the sub-menus to match the main menu spacing.

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -1038,7 +1038,6 @@ header .menu--main {
     text-transform: uppercase;
     color: #fff;
     background: #058488;
-    float: left;
     height: 48px;
     line-height: 48px;
     -webkit-transform: rotate(90deg);
@@ -1046,7 +1045,7 @@ header .menu--main {
     -webkit-transform-origin: 13px 12px 5px;
             transform-origin: 13px 12px 5px;
     padding: 0 24px;
-    width: 520px;
+    width: 400px;
     margin-top: 1px; }
     [block="block-ucsf-main-menu-desktop"] [data-level="level-0"] > .menu-child--label::after {
       content: ' ';
@@ -1101,7 +1100,6 @@ header .menu--main {
 
 [block="block-ucsf-main-menu-desktop"] [data-level="level-0"] > .menu-child--menu {
   display: block;
-  margin-top: 64px;
   width: 464px; }
   [block="block-ucsf-main-menu-desktop"] [data-level="level-0"] > .menu-child--menu .menu-item {
     border-bottom: 1px solid #d5d9de;
@@ -1145,7 +1143,7 @@ header .menu--main {
 [block="block-ucsf-main-menu-desktop"] [data-level="level-1"] {
   position: absolute;
   right: 0;
-  top: 0;
+  top: 48px;
   width: 535px; }
   [block="block-ucsf-main-menu-desktop"] [data-level="level-1"] .menu-child--menu {
     padding-right: 80px;
@@ -1165,8 +1163,7 @@ header .menu--main {
     letter-spacing: 1.6px;
     color: #052049;
     text-transform: uppercase;
-    margin-left: 80px;
-    margin-top: 74px; }
+    margin-left: 80px; }
     [block="block-ucsf-main-menu-desktop"] [data-level="level-1"] .menu-child--label::after {
       content: ' ';
       display: inline-block;
