--- a/docroot/themes/custom/ucsf/scss/navigation/_main-menu.scss
+++ b/docroot/themes/custom/ucsf/scss/navigation/_main-menu.scss
@@ -23,7 +23,7 @@ header .menu--main {
 
 
     &:hover > .menu-child--wrapper {
-
+      //border: 1px solid red;
       @include visually-hidden-reset;
       @include menu-animation;
 
@@ -64,13 +64,13 @@ header .menu--main {
     }
     color: $c-white;
     background: $c-teal;
-    float: left;
+    //float: left;
     height: 48px;
     line-height: 48px;
     transform: rotate(90deg);
     transform-origin: 13px 12px 5px;
     padding: 0 24px;
-    width: 520px;
+    width: 400px;
     margin-top: 1px;
 
 
@@ -118,7 +118,7 @@ header .menu--main {
 
   [data-level="level-0"] > .menu-child--menu {
     display: block;
-    margin-top: 64px;
+    //margin-top: 64px;
     width: 464px;
 
     .menu-item {
@@ -172,7 +172,7 @@ header .menu--main {
   [data-level="level-1"] {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 48px;
     width: 535px;
 
     .menu-child--menu {
@@ -188,7 +188,7 @@ header .menu--main {
     .menu-child--label {
       @include eyebrow;
       margin-left: 80px;
-      margin-top: 74px;
+      //margin-top: 74px;
 
       &:after {
         content: none;
